Add tenant scoping and VietQR support in print templates
Scoped user queries to the tenant context in `UserRepository` to ensure data isolation. Added support for printing VietQR codes in receipts, including backend handling of bank accounts and corresponding frontend UI updates. Enhanced help documentation for related features.

Add PasswordField component and improve notifications handling

Introduced a reusable `PasswordField` component with show/hide, copy, and generate functionality, replacing redundant logic in the frontend. Enhanced backend notification service to support tenant-aware role-based notifications and added async-safe transaction handling for notifications.

Configure application timezone and database settings to UTC+7 (Asia/Ho_Chi_Minh) for consistent timestamp management.